--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta
+    name="keywords"
+    content="marabout, voyance, sorcellerie, vaudou, médium, retour affectif"
+  />
+  <meta
+    name="description"
+    content="Marabout Tidiane est l'un des meilleurs dans sa profession, il est spécialisé dans les services de marabout selon la tradition ancestrale ouest africaine"
+  />
+    <title>Marabout Tidiane</title>
   </head>
   <body>
     <div id="app"></div>
